Login functions documented
